--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -10,4 +10,5 @@ html
         div.wrapper.wrapper-fixed
             block content
         script(src='/js/kickstart.min.js')
+        script(src="/socket.io/socket.io.js")
         block js
