Initial message notification implemented for unloaded chat rooms

--- a/app/angular/home/home.jade
+++ b/app/angular/home/home.jade
@@ -1,5 +1,5 @@
 div.ui.grid.container
-  div.thirteen.wide.column
+  div.twelve.wide.column
     div(ui-view="chat")
-  div.three.wide.column(style="border-left: 1px solid #e3e3e3")
+  div.four.wide.column(style="border-left: 1px solid #e3e3e3")
     div(ui-view="users")
