--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -15,7 +15,8 @@ html
     script(src="/bower/angular-socket-io/socket.js")
     script(src="/bower/ng-notify/dist/ng-notify.min.js")
 
-    script(src='/bower/jquery/dist/jquery.min.js')
-    script(src='/bower/semantic-ui/dist/semantic.min.js')
+    script(src="/bower/jquery/dist/jquery.min.js")
+    script(src="/bower/semantic-ui/dist/semantic.min.js")
+    script(src="/bower/async/dist/async.min.js")
 
     script(src="/js/ng.js")
